compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__suggest_wrapping_a_value_into_ok_if_types_match_with_multiline_result_in_block.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  case todo {\n    1 -> Ok(2)\n    _ -> {\n      todo\n      1\n      |> add_1\n    }\n  }\n}\n\nfn add_1(n: Int) { n + 1 }\n"
---
----- SOURCE CODE

pub fn main() {
  case todo {
    1 -> Ok(2)
    _ -> {
      todo
      1
      |> add_1
    }
  }
}

fn add_1(n: Int) { n + 1 }


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:5
  │    
5 │ ╭       _ -> {
6 │ │         todo
7 │ │ ╭       1
8 │ │ │       |> add_1
  │ │ ╰──────────────^ Did you mean to wrap this in an `Ok`?
9 │ │       }
  │ ╰───────^

This case clause was found to return a different type than the previous
one, but all case clauses must return the same type.

Expected type:

    Result(Int, a)

Found type:

    Int
